# lab1-iss-public

./: .clang-format  .clangd  .gitmodules  .pre-commit-config.yaml  report.md
.github/workflows/: classroom.yml
src/: CMakeLists.txt  core.c  elf_compat.h  halt.h  inst.h  iss.c  load_elf.c  main_mem.h  mem_map.c  test_merge.c  text_buffer.h
tests/: CMakeLists.txt
